# kernel

./: .gitignore  .gitmodules  CMakeLists.txt  README.rst  build.txt  client.pfx  docker-compose.yml  minicom.cap  minify.sh  partitions-4MB.csv  partitions-4mb.csv  partitions.csv  platformio.ini  sdkconfig  sdkconfig.old  thunder-collection_esp32.json
components/IR/: CMakeLists.txt  ir.cpp  ir.h
components/TinyGPS/: CMakeLists.txt  TinyGPS++.cpp  TinyGPS++.h
components/apa102/: CMakeLists.txt  apa102.cpp  apa102.h
components/bluetooth/: CMakeLists.txt  bt.cpp  bt.h
components/camera/: CMakeLists.txt  camera.cpp
components/camera/include/: camera.h
components/eventmgr/: CMakeLists.txt  eventhandlerdescriptor.cpp  eventinterpretor.cpp  eventmgr.cpp  eventmgr.h  manageddevice.cpp  managedthreads.cpp
components/mfile/: CMakeLists.txt  mfile.cpp  mfile.h
components/microtar/: CMakeLists.txt
components/microtar/src/: microtar.c  microtar.h
components/pins/: CMakeLists.txt  analog.cpp  digital.cpp  pins.h
components/rest/: CMakeLists.txt  flash.cpp  handlers.cpp  netjobs.cpp  puller.cpp  pwdentry.cpp  pwdmgr.cpp  pwdmgr.h  rest.cpp  rest.h  restvalid.cpp  route.cpp  route.h  tars.cpp  websocket.cpp
components/servo/: CMakeLists.txt  servo.cpp  servo.h
components/wifi/: CMakeLists.txt  station.cpp  station.h
lfs/web/html/: index.html
main/: Blink.cpp  CMakeLists.txt  Kconfig.projbuild  configmgmt.cpp  idf_component.yml  log.cpp  logs.h  mallocdbg.cpp  mallocdbg.h  utils.cpp  utils.h
main/mdctor/: CMakeLists.txt  ulp.cpp  ulp.h
main/mdctor/ulp/: bumps.S
partition_table/: partitionTable.csv
puller/status/: app.css  app.js  index.html
res/: CMakeLists.txt  app-min.css  app-min.js  app.css  app.js  configschema.json  defaultconfig.json  file_table.html  index-dev.html  index-sd.html  index.html  package-lock.json  package.json  settings.html  test1.js  trow.html
res/src/: app.js  main.js
res/src/components/: AppState.js  ConfigEditor.js  ControlPanel.js  Event.js  EventsPage.js  FirmwarUpdater.js  Program.js  StorageViewer.js  SystemPage.js  TripViewer.js
res/src/components/config/: AnalogPinConfig.js  ConfigGroup.js  ConfigItem.js  DigitalPinConfig.js  IRTracer.js  PinDriverFlag.js
res/src/controls/: BoolInput.js  CmdButton.js  DeviceList.js  IntInput.js  JSONEditor.js  ROProp.js  StateTable.js  Table.js
res/src/css/: app.css  jsoneditor.css
res/src/misc/: crypt.js  utils.js
res/web/: docker-compose.yml  nginx.conf  test.mjpg
res/web/admin/: .env  package.json
res/web/admin/public/: index.html
res/web/admin/src/: App.js  index.js
res/web/admin/src/components/page/main/: DeviceEntry.css  DeviceEntry.js  MainPage.js
res/web/admin/src/components/page/sidebar/: SideBar.css  SideBar.js
res/web/admin/src/components/page/theme/: Theme.js
res/web/app/: .env  .envsd  package-local.json  package-remote.json  package.json
res/web/app/public/: index.html
res/web/app/src/: App.css  App.js  index.js
res/web/app/src/components/controls/: CmdButton.js  DeviceList.js  FirmwareUpdater.js  JSONEditor.css  JSONEditor.js  ROProp.js  Table.js  WebService.css  WebSocket.js
res/web/app/src/components/controls/DeviceList/: DeviceList.css  DeviceList.js
res/web/app/src/components/controls/Events/: Events.css  Events.js
res/web/app/src/components/controls/FirmwareUpdater/: FirmwareUpdater.js
res/web/app/src/components/controls/JSONEditor/: BoolInput.js  CmdButton.js  EditableLabel.js  IntInput.js  JSONEditor.css  JSONEditor.js  ROProp.js  StateCommands.js  Table.js
res/web/app/src/components/controls/Programs/: Programs.css  Programs.js
res/web/app/src/components/controls/WebSocket/: WebSocket.css  WebSocketManager.js
res/web/app/src/components/tabs/Config/: Config.css  JSONEditor.css  Tab.js
res/web/app/src/components/tabs/Config/config/: AnalogPinConfig.js  ConfigGroup.js  ConfigItem.js  DigitalPinConfig.js  IRTracer.js  PinDriverFlag.js
res/web/app/src/components/tabs/Events/: Event.js  Events.css  LiveEvent.js  LiveEventPannel.js  Tab.js
res/web/app/src/components/tabs/Logs/: Logs.css  Tab.js
res/web/app/src/components/tabs/State/: State.css  Tab.js
res/web/app/src/components/tabs/Storage/: FileViewer.js  SFile.js  Storage.css  Tab.js  TripViewer.js  TripWithin.js  UploadManager.js
res/web/app/src/config/: config.js
res/web/app/src/utils/: utils.js  wfetch.js
res/web/front-gate/: .env  Dockerfile  signit.lua
res/web/front-gate/luas/: signit.lua
res/web/front-gate/nginx/: Dockerfile  nginx.conf
res/web/front-gate/nginx/sites/: static.conf
res/web/front-gate/nginx/sites/admin/: admin.conf
res/web/front-gate/nginx/sites/esp32/: main.conf
res/web/front-gate/nginx/sites/services/: esp32.conf  finder.conf
res/web/front-gate/nginx/upstreams/: esp32s.conf
res/web/front-gate/upstreams/: esp32s.conf
res/web/front-gate/web/: nginx.conf
res/web/gate-keeper/: .env  Dockerfile
res/web/gate-keeper/cache/: Dockerfile  redis.conf  start-server.sh
res/web/gate-keeper/luas/: bake-key.lua  setup.lua
res/web/gate-keeper/nginx/: bakeKeys.conf  nginx.conf
res/web/gate-keeper/openresty/: bakeKeys.conf
res/web/gate-keeper/scripts/: bakeClientCert.sh
res/web/nginx/: nginx.conf
res/web/service/: .env  Dockerfile  configurator.js  finder.js  package.json  rest.js  server.js  utils.js  wss.js
